--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,46 +1,31 @@
 {
-  "name": "hello-react-typescript",
-  "version": "1.0.0",
-  "description": "This is a basic react toolchain for a React app with Typescript",
-  "main": "index.js",
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack -w --mode development",
-    "build": "webpack --mode production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Steven24K/Hello-React-Typescript.git"
-  },
-  "keywords": [
-    "react",
-    "toolchain",
-    "typescript"
-  ],
-  "author": "Steven Koerts",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Steven24K/Hello-React-Typescript/issues"
-  },
-  "homepage": "https://github.com/Steven24K/Hello-React-Typescript#readme",
-  "devDependencies": {
-    "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.2.2",
-    "typescript": "^5.4.5",
-    "url-loader": "^1.1.2",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "@types/react-router-dom": "^5.3.3",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "vite": "^6.0.1"
   }
 }
