--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-big-calendar": "^1.17.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -29,6 +31,7 @@
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "@types/react-big-calendar": "^1.17.1"
   }
 }
