--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "FromEmail": "your-email@example.com",
+    "FromPassword": "your-email-password",
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587
+  }
 }
