Revert "Merge branch 'main' of https://github.com/Damian5314/Calendify"
This reverts commit 2794930f3b429569420e9165f7abb4f5136395c4, reversing
changes made to 4c8a475b38da831f13044dc2fc2b90b87ffd01e8.

--- a/.gitignore
+++ b/.gitignore
@@ -395,11 +395,16 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-*.csproj
+*.sln
 bin/
-obj/*
-*/Backend.csproj
+obj/
+Backend/obj/
+CargohubV1/api/__pycache__/
+CargohubV1/api/.pytest_cache/
+CargohubV1/api/models/__pycache__/
+CargohubV1/api/processors/__pycache__/
+CargohubV1/api/providers/__pycache__/
+CargohubV1/api/testing/__pycache__/
 .vscode/
 .venv/
 .pytest_cache/
-*/obj/
