--- a/.gitignore
+++ b/.gitignore
@@ -395,16 +395,11 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-*.sln
+*.csproj
 bin/
-obj/
-Backend/obj/
-CargohubV1/api/__pycache__/
-CargohubV1/api/.pytest_cache/
-CargohubV1/api/models/__pycache__/
-CargohubV1/api/processors/__pycache__/
-CargohubV1/api/providers/__pycache__/
-CargohubV1/api/testing/__pycache__/
+obj/*
+*/Backend.csproj
 .vscode/
 .venv/
 .pytest_cache/
+*/obj/
